tests/snapshots/review__review_card_not_due_early.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - "--config=/tmp/.tmpki1Aym/losrs.toml"
    - review
    - /tmp/.tmpki1Aym
    - "--at=2025-03-22T09:54:57.202Z"
    - "--up-to=2025-11-21T00:00:00.000Z"
  page_lines:
    - "- Not card"
    - "- What is a sphere? #card"
    - "  card-last-interval:: 244.14"
    - "  card-repeats:: 6"
    - "  card-ease-factor:: 3.1"
    - "  card-next-schedule:: 2025-11-21T00:00:00.000Z"
    - "  card-last-reviewed:: 2025-03-22T09:54:57.202Z"
    - "  card-last-score:: 5"
    - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
    - "- Not card"
    - ""
  interaction_meta:
    expected type of interaction: review
    remembered: "true"
---
- Not card
- What is a sphere? #card
  card-last-interval:: 245
  card-repeats:: 7
  card-ease-factor:: 2.5
  card-next-schedule:: 2025-11-22T09:54:57.202Z
  card-last-reviewed:: 2025-03-22T09:54:57.202Z
  card-last-score:: 5
  card-fsrs-metadata:: {"due":"2025-11-22T09:54:57.202Z","stability":244.14,"difficulty":4.96,"elapsed_days":0,"scheduled_days":245,"reps":7,"lapses":0,"state":"Review","last_review":"2025-03-22T09:54:57.202Z"}
  - Set of points in a 3 dimensional space that are equidistant from a center point.
- Not card
