tests/snapshots/review__review_card_seed_100.snap
---
source: tests/review.rs
info:
  program: losrs
  args:
    - "--config=/tmp/.tmp2HxfQQ/losrs.toml"
    - review
    - /tmp/.tmp2HxfQQ
    - "--at=2025-09-01T15:04:05.123456789Z"
    - "--seed=100"
  page_lines:
    - "- Not card"
    - "- Alphabet forward cards"
    - "  - What is Gregg Simplified for \"N\" (description)? #card"
    - "    card-last-interval:: 15.0"
    - "    card-repeats:: 4"
    - "    card-ease-factor:: 1.0"
    - "    card-next-schedule:: 2025-08-12T09:03:05.489Z"
    - "    card-last-reviewed:: 2025-07-04T09:03:05.489Z"
    - "    card-last-score:: 1"
    - "    - forward short stroke"
    - "  - What is Gregg Simplified for \"M\" (description)? #card"
    - "    card-last-interval:: 15.0"
    - "    card-repeats:: 4"
    - "    card-ease-factor:: 1.0"
    - "    card-next-schedule:: 2025-08-12T09:03:05.489Z"
    - "    card-last-reviewed:: 2025-07-04T09:03:05.489Z"
    - "    card-last-score:: 1"
    - "    - forward long stroke"
    - "- Not card"
    - ""
  interaction_meta:
    first card with given seed: "What is Gregg Simplified for \"N\" (description)?"
    expected type of interaction: "review first card, then nope out"
---
- Not card
- Alphabet forward cards
  - What is Gregg Simplified for "N" (description)? #card <!-- CSN:0 -->
    card-last-interval:: 120
    card-repeats:: 5
    card-ease-factor:: 2.5
    card-next-schedule:: 2025-12-30T15:04:05.123Z
    card-last-reviewed:: 2025-09-01T15:04:05.123Z
    card-last-score:: 5
    card-fsrs-metadata:: {"due":"2025-12-30T15:04:05.123Z","stability":120.037,"difficulty":4.96,"elapsed_days":59,"scheduled_days":120,"reps":5,"lapses":0,"state":"Review","last_review":"2025-09-01T15:04:05.123Z"}
    - forward short stroke
  - What is Gregg Simplified for "M" (description)? #card
    card-last-interval:: 15.0
    card-repeats:: 4
    card-ease-factor:: 1.0
    card-next-schedule:: 2025-08-12T09:03:05.489Z
    card-last-reviewed:: 2025-07-04T09:03:05.489Z
    card-last-score:: 1
    - forward long stroke
- Not card
