tests/snapshots/review__review_remembered_yes.snap
---
source: tests/review.rs
info:
  program: losrs
  args:
    - "--config=/tmp/.tmp68AgVh/losrs.toml"
    - review
    - /tmp/.tmp68AgVh
    - "--at=2025-11-22T15:04:05.123456789Z"
  page_lines:
    - "- Not card"
    - "- What is a sphere? #card"
    - "  card-last-interval:: 244.14"
    - "  card-repeats:: 6"
    - "  card-ease-factor:: 3.1"
    - "  card-next-schedule:: 2025-11-21T00:00:00.000Z"
    - "  card-last-reviewed:: 2025-03-22T09:54:57.202Z"
    - "  card-last-score:: 5"
    - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
    - "- Not card"
    - ""
  interaction_meta:
    remembered: "true"
    expected type of interaction: review
---
- Not card
- What is a sphere? #card <!-- CSN:0 -->
  card-last-interval:: 606
  card-repeats:: 7
  card-ease-factor:: 2.5
  card-next-schedule:: 2027-07-21T15:04:05.123Z
  card-last-reviewed:: 2025-11-22T15:04:05.123Z
  card-last-score:: 5
  card-fsrs-metadata:: {"due":"2027-07-21T15:04:05.123Z","stability":605.916,"difficulty":4.96,"elapsed_days":245,"scheduled_days":606,"reps":7,"lapses":0,"state":"Review","last_review":"2025-11-22T15:04:05.123Z"}
  - Set of points in a 3 dimensional space that are equidistant from a center point.
- Not card
